kanc/src/tests/sample_code/should_succeed/multi_file/no_warnings/pong/src/std/time.k
use super.num.Nat;

pub type Time {
    time(millis_since_epoch: Nat): Time,
}
