kanc/src/tests/sample_code/should_fail/multi_file/bind/expected_term_got_mod/src/mod.k
pub mod foo;

pub type FooPair {
    .c(_: foo, _: foo): FooPair,
}
